# SmartHomeProject1

./: CMakeLists.txt  README.md  SmartDevice.h  smartHomeManager.h
src/: Switchable.h  doorLock.cpp  doorLock.h  exceptions.h  light.cpp  light.h  main.cpp  smartDevice.cpp  smartHomeManager.cpp  thermostat.cpp  thermostat.h
